--- a/AzureVisionNotebook.ipynb
+++ b/AzureVisionNotebook.ipynb
@@ -53,7 +53,7 @@
     "    from PIL import Image\n",
     "    from io import BytesIO\n",
     "    \n",
-    "    subscription_key = input(\"enter API key\")\n",
+    "    subscription_key = input(\"Enter your API key here: \")\n",
     "    assert subscription_key\n",
     "    vision_base_url = \"https://westcentralus.api.cognitive.microsoft.com/vision/v2.0/\"\n",
     "    # You have use the same region from your subscription key in the above address\n",
@@ -73,6 +73,46 @@
     "    \n",
     "\n",
     "img_analysis(\"IMAGE-URL-GOES-HERE\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Another way to use this code is to provide an image locally for analysis.  In the code below, replace \"IMAGE-PATH-GOES-HERE\" with the path to the image that you want to analyze.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def image_analysis_local(image_path, subscription_key):\n",
+    "    import requests\n",
+    "    import matplotlib.pyplot as plt\n",
+    "    from PIL import Image\n",
+    "    from io import BytesIO\n",
+    "    \n",
+    "    assert subscription_key\n",
+    "    \n",
+    "    # You have to use the same region from your subscription key in the above address\n",
+    "    vision_base_url = \"https://westcentralus.api.cognitive.microsoft.com/vision/v2.0/\"\n",
+    "    analyze_url = vision_base_url + \"analyze\"\n",
+    "    \n",
+    "    image_data = open(image_path, \"rb\").read()\n",
+    "    headers    = {'Ocp-Apim-Subscription-Key': subscription_key, 'Content-Type': 'application/octet-stream'}\n",
+    "    params     = {'visualFeatures': 'Description'}\n",
+    "    response = requests.post(analyze_url, headers=headers, params=params, data=image_data)\n",
+    "    response.raise_for_status()\n",
+    "    \n",
+    "    #The code below prints out the JSON stuff so you can see what gets returned \n",
+    "    #and makes up a caption based on the keywords that the tool finds\n",
+    "    analysis = response.json()\n",
+    "    print(analysis)\n",
+    "    image_caption = analysis[\"description\"][\"captions\"][0][\"text\"].capitalize().replace('\"','')\n",
+    "    \n",
+    "image_analysis_local(\"IMAGE-PATH-GOES-HERE\", input(\"Enter your API key here: \"))"
    ]
   },
   {
